--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="api_response_will_appear_here">API response will appear here</string>
     <string name="product_name">Product Name</string>
     <string name="stock">Stock:</string>
+    <string name="privacy_policy_title">Privacy Policy</string>
 </resources>
