--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="cancel_button_text">Cancel</string>
     <string name="invalid_stock_quantity_message">Please enter a valid stock quantity!</string>
     <string name="app_info_title">App Info</string>
-    <string name="about_text">\@2025 Kivno LLC\n\nVersion %1$s</string>
+    <string name="about_text">\@2025 Kinvo LLC\n\nVersion %1$s</string>
 
 
 
