--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="invalid_stock_quantity_message">Please enter a valid stock quantity!</string>
     <string name="app_info_title">App Info</string>
     <string name="about_text">\@2025 Kinvo LLC\n\nVersion %1$s</string>
-
+    <string name="logout">Logout</string>
 
 
 </resources>
