--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,8 @@
     <string name="app_info_title">App Info</string>
     <string name="about_text">\@2025 Kinvo LLC\n\nVersion %1$s</string>
     <string name="logout">Logout</string>
+    <string name="banner_text">Welcome</string>
+    <string name="title_settings">Settings</string>
 
 
 </resources>
