--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,23 @@
     <string name="logout">Logout</string>
     <string name="banner_text">Welcome</string>
     <string name="title_settings">Settings</string>
+    <string name="title_provider_picker">Choose your provider</string>
+    <string name="provider_picker_subtitle">Where is your inventory managed?</string>
+    <string name="provider_eposnow">Epos Now</string>
+    <string name="provider_shopify">Shopify</string>
+    <string name="provider_clover">Clover</string>
+    <string name="action_change_provider">Change provider</string>
+    <string name="changing_provider">Switching provider…</string>
+    <string name="menu_export_csv">Export CSV</string>
+    <string name="export_csv_done">Exported %1$d items</string>
+    <string name="export_csv_none">No products to export</string>
+    <string name="export_csv_error">Export failed</string>
+    <string name="action_update_stock">Update Stock</string>
+    <string name="location_id">Location ID</string>
+    <string name="btncontinue">Continue</string>
+    <string name="eposnow_api_key">EPOSNow API Key</string>
+    <string name="eposnow_api_secret">EPOSNow API Secret</string>
+    <string name="remember_api_key_secret">Remember API Key-Secret</string>
 
 
 </resources>
